--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.text.*?>
 
 <BorderPane id="background" prefWidth="1000.0" prefHeight="1000.0" xmlns:fx="http://javafx.com/fxml">
     <top>
         <ToolBar>
-            <Region styleClass="spacer" />
-            <HBox id = "workspace-bar" styleClass="segmented-button-bar" style="-fx-spacing: 750.0">
-                <Text text="SLogo" />
-            </HBox>
+                <Button id="newWorkspace" style="-fx-base: Blue"  text="New Workspace" styleClass="first" /> 
+                <TabPane id="workspaceTabs"  style="-fx-spacing: 750.0">
+                </TabPane>
         </ToolBar>
     </top>
     <left>
              <VBox styleClass="segmented-button-bar" style="-fx-background-color: #CCFF99; -fx-spacing: 3.0">
-                <Button id="newTurtle" style="-fx-base: Blue"  text="Add Turtle" styleClass="first" />   
             </VBox>
     </left>
+    <bottom>
+        <HBox>
+            <TextArea id="textInput" prefHeight="150.0" prefWidth="900.0"/>
+            <Button id="submitText" style="-fx-base: Green"  text="Submit" styleClass="first" /> 
+        </HBox>
+    </bottom>
 </BorderPane>
