Added PenColorPickerAndButton feature

--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -25,6 +25,7 @@
     <right>
              <VBox styleClass="segmented-button-bar" style="-fx-spacing: 3.0">
                 <BackgroundColorPickerAndButton fx:id="myBackgroundColorPickerAndButton"/>
+                <PenColorPickerAndButton fx:id="myPenColorPickerAndButton"/>
                 <Pane prefHeight="200.0">
                     <SubmitTextButtonAndField fx:id="mySubmitTextButtonAndField" />
                 </Pane>
