--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.text.*?>
 <?import application.GUIfeatures.*?>
+<?import application.*?>
 
 <BorderPane id="background" prefWidth="1000.0" prefHeight="1000.0" xmlns:fx="http://javafx.com/fxml" fx:controller="application.Controller">
     <top>
@@ -33,15 +34,12 @@
                 <DashPenButton fx:id="myDashPenButton"/>
                 <DotPenButton fx:id="myDotPenButton"/>
                 <PenSizeSlider fx:id="myPenSizeSlider"/>
-                 <Pane prefHeight="200.0">
-                    <ChooseTurtleImageButton fx:id="myTurtleImageButtonAndField" />
-                </Pane>
+                <ChooseTurtleImageButton fx:id="myTurtleImageButtonAndField" />
                 <ShowAndHideTurtleButton fx:id="myShowAndHideTurtleButton"/>
                 <HistoryFeature fx:id="myHistoryFeature"/>
                 <SubmitTextButtonAndField fx:id="mySubmitTextButtonAndField" />
             </VBox>
     </right>
     <bottom>
-
     </bottom>
 </BorderPane>
