--- a/src/application/RootLayout.fxml
+++ b/src/application/RootLayout.fxml
@@ -25,6 +25,7 @@
     </center>
     <right>
              <VBox styleClass="segmented-button-bar" style="-fx-spacing: 3.0">
+             	<SLogoFileOpener fx:id="myFileOpener"/>
                 <HelpPageButton fx:id="myHelpPage"/>
                 <KeyControlFeature fx:id="myKeyControlFeature"/>
                 <BackgroundColorPickerAndButton fx:id="myBackgroundColorPickerAndButton"/>
